--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -13,7 +13,7 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'css/users/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/users.css' %}" />
 
     <title>Masuk | Dooit</title>
   </head>
@@ -24,15 +24,17 @@
         <div class="form login">
           <span class="title">Masuk Sekarang</span>
 
-          <form action="#">
+          <form action="" method="POST">
+            {% csrf_token %}
             <div class="input-field">
-              <input type="text" placeholder="Masukkan email anda" required />
+              <input type="text" name="email" placeholder="Masukkan email anda" required />
               <i class="uil uil-envelope icon"></i>
             </div>
 
             <div class="input-field">
               <input
                 type="password"
+                name="password"
                 class="password"
                 placeholder="Masukkan password anda"
                 required
@@ -41,24 +43,15 @@
               <i class="uil uil-eye-slash showHidePw"></i>
             </div>
 
-            <div class="checkbox-text">
-              <div class="checkbox-content">
-                <input type="checkbox" id="logCheck" />
-                <label for="logCheck" class="text">Remember me</label>
-              </div>
-
-              <a href="#" class="text">Forgot password?</a>
-            </div>
-
             <div class="input-field button">
-              <input type="button" value="Masuk" />
+              <input type="submit" value="Masuk" />
             </div>
           </form>
 
           <div class="login-signup">
             <span class="text"
               >Belum punya akun?
-              <a href="#" class="text signup-link">Daftar sekarang</a>
+              <a href="{% url 'register' %}" class="text signup-link">Daftar sekarang</a>
             </span>
           </div>
         </div>
