--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,11 @@
   <div class="min-height-300 bg-primary position-absolute w-100"></div>
   
   <!-- LOAD SIDEBAR HERE -->
-  {% include 'includes/sidebar.html' %}
+  {% if request.user.get_role == 'Pencatat' %}
+    {% include 'includes/sidebar_pencatat.html' %}
+  {% else %}
+    {% include 'includes/sidebar_konsultan.html' %}
+  {% endif %}
 
   <main class="main-content position-relative border-radius-lg">
     
