--- a/templates/includes/sidebar_pencatat.html
+++ b/templates/includes/sidebar_pencatat.html
@@ -14,7 +14,7 @@
   <div class="w-auto " id="sidenav-collapse-main">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="../pages/dashboard.html">
+        <a class="nav-link active" href="">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-tv text-primary text-sm opacity-10"></i>
@@ -23,7 +23,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/tables.html">
+        <a class="nav-link " href="{% url 'index' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-exchange text-primary text-sm opacity-10"></i>
@@ -32,7 +32,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/billing.html">
+        <a class="nav-link " href="{% url 'kategori:index' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-th-large text-primary text-sm opacity-10"></i>
@@ -41,7 +41,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/virtual-reality.html">
+        <a class="nav-link " href="{% url 'anggaran:index' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-donate text-primary text-sm opacity-10"></i>
@@ -50,7 +50,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/rtl.html">
+        <a class="nav-link " href="{% url 'konsultasi:index' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-comments text-primary text-sm opacity-10"></i>
@@ -59,7 +59,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../pages/dashboard.html">
+        <a class="nav-link" href="/">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-archway text-primary text-sm opacity-10"></i>
@@ -71,7 +71,7 @@
         <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Akun</h6>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/profile.html">
+        <a class="nav-link " href="#">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
@@ -80,7 +80,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/sign-in.html">
+        <a class="nav-link " href="#">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-cog text-dark text-sm opacity-10"></i>
@@ -89,7 +89,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="../pages/sign-up.html">
+        <a class="nav-link " href="{% url 'logout' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-sign-out text-dark text-sm opacity-10"></i>
