--- a/kategori/templates/buat_kategori.html
+++ b/kategori/templates/buat_kategori.html
@@ -1,27 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buat Anggaran</title>
-</head>
-<body>
-    <form method="post">
+{% extends 'base.html' %}
+{% load static %}
 
-    {% csrf_token %}
-    {{ form }}
-</form>
-</body>
-</html>
-</body>
-</html>
+{% block title %} Buat Kategori Baru {% endblock title %}
+
+{% block content %}
+<div class="container">
+  <div class="row mt-4 justify-content-center">
+    <div class="col-12 mx-auto">
+      <div class="card z-index-0">
+        <div class="card-header pb-2">
+          <a href="{% url 'kategori:index' %}">
+            <div class="btn btn-sm btn-icon btn-3 btn-danger mb-4">
+              <span class="btn-inner--icon me-2"><i class="fa fa-arrow-left"></i></span>
+              <span class="btn-inner--text">Kembali</span>
+            </div>
+          </a>
+          <h5 class="text-center">Formulir Pembuatan Kategori</h5>
+        </div>
+        <div class="card-body">
+          <form role="form" action="" method="post">
+            {% csrf_token %} 
+            <div class="mb-3">
+                <label class="form-control-label">Nama Kategori</label> {{ form.nama }}
+            </div>
+            <div class="mb-3">
+                <label class="form-control-label">Jenis Kategori</label> {{ form.jenis_kategori }}
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-dark w-100 my-4 mb-2">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock content %}
