--- a/konsultasi/templates/konsultasi_index.html
+++ b/konsultasi/templates/konsultasi_index.html
@@ -27,11 +27,15 @@
 
   <div class="col-xl-4 col-sm-6 col-12 mb-4">
     <div class="card">
-      <div class="card-header bg-tertiary pb-0"></div>
+      <div class="card-header bg-tertiary pt-0"></div>
       <div class="card-body bg-tertiary">
         <div class="d-flex">
-          <div class="py-2">
+          <div class="py-0">
+            <div class="col-4 text-end">
+              <div class="icon icon-shape bg-dark shadow-primary text-center rounded-circle">
 
+              </div>
+            </div>
           </div>
           <div class="flex-fill">
 
