feat: create template for index & buat anggaran

--- a/static/css/argon-dashboard.css
+++ b/static/css/argon-dashboard.css
@@ -10595,7 +10595,7 @@ fieldset:disabled .btn {
 }
 
 .bg-tertiary {
-  background-color: #e8e8e8 !important;
+  background-color: #f7f7f7 !important;
 }
 
 .bg-success {
