--- a/anggaran/templates/anggaran_index.html
+++ b/anggaran/templates/anggaran_index.html
@@ -1,31 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <table>
+{% extends 'base.html' %}
+{% load static %}
+{% load humanize %}
+
+{% block title %} Daftar Anggaran{% endblock title %}
+
+{% block content %}
+
+<div class="container">
+  <div class="row mt-4 justify-content-center">
+    <div class="col-12 mx-auto">
+      <div class="card z-index-0">
+        <div class="card-header pb-2">
+            <a href="{% url 'anggaran:buat_anggaran' %}">
+                <div class="d-flex flex-row-reverse">
+                    <div class="btn btn-icon btn-3 btn-dark mb-4">
+                        <span class="btn-inner--text">Buat Anggaran</span>
+                        <span class="btn-inner--icon me-2"><i class="fas fa-plus ms-2"></i></span>
+                      </div>
+                </div>
+              </a>
+          <h3 class="text-center">Daftar Anggaran</h3>
+        </div>
+        <div class="container">
+            <div class="row">
         {% if anggarans %}
-        <tr>
-            <th>Nominal</th>
-            <th>Deskripsi</th>
-            <th>Kategori</th>
-            <th>Tanggal Mulai</th>
-            <th>Tanggal Selesai</th>
-        </tr>
             {% for anggaran in anggarans %}
-            <tr>
-                <td>{{ anggaran.nominal }}</td>
-                <td>{{ anggaran.deskripsi }}</td>
-                <td>{{ anggaran.kategori }}</td>
-                <td>{{ anggaran.tanggal_mulai }}</td>
-                <td>{{ anggaran.tanggal_selesai }}</td>
-            </tr>
+                <div class="col-md-4 mb-3">
+                    <div class="card bg-tertiary p-3 mb-2 mt-3">
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex flex-row align-items-center">
+                                <div class="ms-2 c-details">
+                                    <h4 class="mb-0">{{anggaran.kategori}}</h4> 
+                                    <span>{{anggaran.tanggal_mulai}} - {{anggaran.tanggal_selesai}}</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="horizontal bg-primary pt-1">
+                        <div class="mt-1">
+                            <div class="row">
+                                <div class="col">
+                                    Anggaran
+                                </div>
+                                <div class="col">
+                                    Sisa
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <h3 class="text-lg">Rp {{anggaran.nominal|intcomma}}</h3>
+                                </div>
+                                <div class="col">
+                                    <h3 class="text-lg">Rp {{anggaran.get_sisa|intcomma}}</h3>
+                                </div>
+                            </div>
+                            <div class="mt-1">
+                                <div class="progress" style="height:12px">
+                                    <div class="progress-bar" role="progressbar" style="width: {{anggaran.get_persentase}}%">{{anggaran.get_persentase}}%</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
         {% endif %}
-     </table>
-</body>
-</html>
+            </div>
+        </div>
+{% endblock content %}
