--- a/anggaran/templates/buat_anggaran.html
+++ b/anggaran/templates/buat_anggaran.html
@@ -1,16 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buat Anggaran</title>
-</head>
-<body>
-    <form method="post">
+{% extends 'base.html' %}
+{% load static %}
 
-    {% csrf_token %}
-    {{ form }}
-</form>
-</body>
-</html>
+{% block title %} Buat Anggaran Baru {% endblock title %}
+
+{% block content %}
+<div class="container">
+  <div class="row mt-4 justify-content-center">
+    <div class="col-12 mx-auto">
+      <div class="card z-index-0">
+        <div class="card-header pb-2">
+          <a href="{% url 'anggaran:index' %}">
+            <div class="btn btn-icon btn-3 btn-danger mb-4">
+              <span class="btn-inner--icon me-2"><i class="fa fa-arrow-left"></i></span>
+              <span class="btn-inner--text">Kembali</span>
+            </div>
+          </a>
+          <h3 class="text-center">Formulir Pembuatan Anggaran</h3>
+        </div>
+        <div class="card-body">
+          <form role="form" action="" method="post">
+            {% csrf_token %} 
+            <div class="mb-3">
+                <label class="form-control-label">Nominal Anggaran</label> {{ form.nominal }}
+            </div>
+            <div class="mb-3">
+                <label class="form-control-label">Deskripsi Anggaran</label> {{ form.deskripsi }}
+            </div>
+            <div class="mb-3">
+                <label class="form-control-label">Kategori Anggaran</label> {{ form.kategori }}
+            </div>
+            <div class="mb-3">
+                <label class="form-control-label">Tanggal Mulai Anggaran</label> {{ form.tanggal_mulai }}
+            </div>
+            <div class="mb-3">
+                <label class="form-control-label">Tanggal Selesai Anggaran</label> {{ form.tanggal_selesai }}
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-dark w-100 my-4 mb-2">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock content %}
