change: update kategori template

--- a/kategori/templates/buat_kategori.html
+++ b/kategori/templates/buat_kategori.html
@@ -10,12 +10,12 @@
       <div class="card z-index-0">
         <div class="card-header pb-2">
           <a href="{% url 'kategori:index' %}">
-            <div class="btn btn-sm btn-icon btn-3 btn-danger mb-4">
+            <div class="btn btn-icon btn-3 btn-danger mb-4">
               <span class="btn-inner--icon me-2"><i class="fa fa-arrow-left"></i></span>
               <span class="btn-inner--text">Kembali</span>
             </div>
           </a>
-          <h5 class="text-center">Formulir Pembuatan Kategori</h5>
+          <h3 class="text-center">Formulir Pembuatan Kategori</h3>
         </div>
         <div class="card-body">
           <form role="form" action="" method="post">
