--- a/anggaran/templates/anggaran_index.html
+++ b/anggaran/templates/anggaran_index.html
@@ -21,12 +21,12 @@
               </a>
           <h3 class="text-center">Daftar Anggaran</h3>
         </div>
-        <div class="container">
+        <div class="card-body">
             <div class="row">
         {% if anggarans %}
             {% for anggaran in anggarans %}
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-tertiary p-3 mb-2 mt-3">
+                    <div class="card bg-tertiary p-3 mb-2">
                         <div class="d-flex justify-content-between">
                             <div class="d-flex flex-row align-items-center">
                                 <div class="ms-2 c-details">
