--- a/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
+++ b/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
@@ -4,40 +4,47 @@
 
 
 {% block content %}
-<div class="container mt-4">
-  <div class="row">
-    <div class="col-md-10">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="">Expenses Summary</a>
-          </li>
-          <li class="breadcrumb-item active" aria-current="page">
-           Summary
-          </li>
-        </ol>
-      </nav>
+<div class="container">
+  <div class="row mt-4 justify-content-center">
+    <div class="col-12 mx-auto">
+      <div class="card z-index-0">
+        <div class="card-header pb-2">
+          <div class="d-flex flex-row-reverse">
+              <a href="">
+              <div class="btn btn-icon btn-3 btn-dark mb-4">
+                  <span class="btn-inner--text">Buat Transaksi</span>
+                  <span class="btn-inner--icon me-2 ms-2"><i class="fa fa-plus"></i></span>
+              </div>
+              </a>
+          </div>
+          <h3 class="text-center">Laporan Keuangan</h3>
+        </div>
+        <div class="card-body">
+          <!-- input here -->
+          
+          <div class="row">
+            <div class="col-6">
+              <h4 class="mx-4">Pengeluaran</h4>
+              <canvas id="myChart1"></canvas>
+            </div>
+            <div class="col-5">
+              <h4 class="mx-4">Pemasukan</h4>
+              <canvas id="myChart2"></canvas>
+            </div>
+            <!-- <div class="col-sm">
+              <span>One of three columns</span>
+            </div> -->
+        </div>
+      </div>
     </div>
-
-    <div class="col-md-2">
-      <a href="" class="btn btn-primary">BACK</a>
-    </div>
-
   </div>
-
- <div class="row">
-<div class="col-md-8">
- <canvas id="myChart1" width="10" height="10"></canvas>
 </div>
-<div class="col-md-8">
-  <canvas id="myChart2" width="300" height="200"></canvas>
- </div>
-
- </div>
-</div>
-
-<script src="{% static 'js/stats.js' %}"></script>
-
+<link rel="stylesheet" href="{% static 'css/catatantransaksi.css' %}" />
+<script src="{% static 'js/statsPengeluaran.js' %}"></script>
+<script src="{% static 'js/statsPemasukan.js' %}"></script>
 </script>
 
 {% endblock content %}
+
+
+
