--- a/catatanTransaksi/templates/catatan_transaksi_index.html
+++ b/catatanTransaksi/templates/catatan_transaksi_index.html
@@ -1,31 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catatan Transaksi</title>
-</head>
-<body>
-    <table>
-        {% if catatanTransaksis %}
-        <tr>
-            <th>Deskripsi</th>
-            <th>Nominal</th>
-            <th>Tanggal</th>
-            <th>Jenis</th>
-            <th>Kategori</th>
-        </tr>
-            {% for catatanTransaksi in catatanTransaksis %}
-            <tr>
-                <td>{{ catatanTransaksi.deskripsi }}</td>
-                <td>{{ catatanTransaksi.nominal }}</td>
-                <td>{{ catatanTransaksi.tanggal }}</td>
-                <td>{{ catatanTransaksi.jenis }}</td>
-                <td>{{ catatanTransaksi.kategori }}</td>
-            </tr>
-            {% endfor %}
-        {% endif %}
-     </table>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% load humanize %}
+
+{% block title %} List Konsultasi Anda Saat Ini {% endblock title %}
+
+{% block content %}
+<div class="card">
+  <div class="card-header pb-1">
+    <div class="d-flex justify-content-between align-items-center">
+      <h3>Daftar Catatan Transaksi</h3>
+      <div class="flex-fill pe-4">
+        <a href="{% url 'catatan-transaksi:buat' %}">
+          <div class="d-flex flex-row-reverse">
+            <div class="btn btn-icon btn-3 btn-dark">
+              <span class="btn-inner--text">Buat Catatan Transaksi</span>
+              <span class="btn-inner--icon me-2"><i class="fas fa-plus ms-2"></i></span>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <hr class="horizontal bg-primary pt-1 my-0">
+  </div>
+  <div class="card-body py-2">
+    <h5 class="text-center">Total Saldo</h5>
+    <h3 class="text-center">Rp {{ totalSaldo|intcomma }}</h3>
+  </div>
+</div>
+
+<div class="row m-6 mx-sm-4">
+  {% if catatanTransaksis %}
+  {% for catatanTransaksi in catatanTransaksis %}
+  <div class="col-xl-4 col-sm-6 col-12 mb-4">
+    <div class="card">
+      <div class="card-header bg-tertiary pt-0"></div>
+      <div class="card-body bg-tertiary">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex flex-row align-items-center">
+            <div class="ms-2 c-details">
+              <h4 class="mb-0">{{catatanTransaksi.kategori}}</h4>
+              <span>{{catatanTransaksi.tanggal}}</span>
+            </div>
+          </div>
+        </div>
+        <hr class="horizontal bg-primary pt-1">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex flex-row align-items-center">
+            <div class="ms-2 c-details">
+              <span class="d-inline-block text-truncate" style="max-width: 25ch;">{{ catatanTransaksi.deskripsi }}</span>
+              <p style="color:DodgerBlue;"><strong> Rp {{ catatanTransaksi.nominal|intcomma }}</strong></p>
+              <p style="color:red;"><strong> Rp {{ catatanTransaksi.nominal|intcomma }}</strong></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  {% endfor %}
+  {% endif %}
+</div>
+{% endblock content %}
