--- a/templates/includes/sidebar_pencatat.html
+++ b/templates/includes/sidebar_pencatat.html
@@ -23,7 +23,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="{% url 'index' %}">
+        <a class="nav-link " href="{% url 'catatan-transaksi:index' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-exchange text-primary text-sm opacity-10"></i>
