--- a/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
+++ b/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
@@ -19,22 +19,138 @@
           </div>
           <h3 class="text-center">Laporan Keuangan</h3>
         </div>
-        <div class="card-body">
-          <!-- input here -->
-          
+        <div class="card-body"> 
           <div class="row">
-            <div class="col-6">
-              <h4 class="mx-4">Pengeluaran</h4>
-              <canvas id="myChart1"></canvas>
+            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="card">
+            <div class="card-body p-3">
+            <div class="row">
+            <div class="col-8">
+            <div class="numbers">
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Today's Money</p>
+            <h5 class="font-weight-bolder">
+            $53,000
+            </h5>
+            <p class="mb-0">
+            <span class="text-success text-sm font-weight-bolder">+55%</span>
+            since yesterday
+            </p>
             </div>
-            <div class="col-5">
-              <h4 class="mx-4">Pemasukan</h4>
-              <canvas id="myChart2"></canvas>
             </div>
-            <!-- <div class="col-sm">
-              <span>One of three columns</span>
+            <div class="col-4 text-end">
+            <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+            <i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="card">
+            <div class="card-body p-3">
+            <div class="row">
+            <div class="col-8">
+            <div class="numbers">
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Today's Users</p>
+            <h5 class="font-weight-bolder">
+              {{total_pemasukan}}
+            </h5>
+            <p class="mb-0">
+            <span class="text-success text-sm font-weight-bolder">+3%</span>
+            since last week
+            </p>
+            </div>
+            </div>
+            <div class="col-4 text-end">
+            <div class="icon icon-shape bg-gradient-danger shadow-danger text-center rounded-circle">
+            <i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            <!-- <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="card">
+            <div class="card-body p-3">
+            <div class="row">
+            <div class="col-8">
+            <div class="numbers">
+             <p class="text-sm mb-0 text-uppercase font-weight-bold">New Clients</p>
+            <h5 class="font-weight-bolder">
+            +3,462
+            </h5>
+            <p class="mb-0">
+            <span class="text-danger text-sm font-weight-bolder">-2%</span>
+            since last quarter
+            </p>
+            </div>
+            </div>
+            <div class="col-4 text-end">
+            <div class="icon icon-shape bg-gradient-success shadow-success text-center rounded-circle">
+            <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            <div class="col-xl-3 col-sm-6">
+            <div class="card">
+            <div class="card-body p-3">
+            <div class="row">
+            <div class="col-8">
+            <div class="numbers">
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Sales</p>
+            <h5 class="font-weight-bolder">
+            $103,430
+            </h5>
+            <p class="mb-0">
+            <span class="text-success text-sm font-weight-bolder">+5%</span> than last month
+            </p>
+            </div>
+            </div>
+            <div class="col-4 text-end">
+            <div class="icon icon-shape bg-gradient-warning shadow-warning text-center rounded-circle">
+            <i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
             </div> -->
-        </div>
+            </div>  
+          <!-- <div class="row"> -->
+            <div class="row mt-4">
+              <div class="col-lg-7 mb-lg-0 mb-4">
+              <div class="card z-index-2 h-100">
+              <div class="card-header pb-0 pt-3 bg-transparent">
+              <h6 class="text-capitalize">Pengeluaran Vs Pemasukan</h6>
+              </div>
+              <div class="card-body p-3">
+              <div class="chart">
+              <canvas id="myChart2" class="chart-canvas" height="375" width="637" style="display: block; box-sizing: border-box; height: 300px; width: 509.6px;"></canvas>
+              </div>
+              </div>
+              </div>
+              </div>
+              <div class="col-lg-5">
+              <div class="card card-carousel overflow-hidden h-100 p-0">
+                <div class="card-header pb-0 pt-3 bg-transparent">
+                  <h6 class="text-capitalize">Pengeluaran</h6>
+                </div>
+              <div class="chart">
+                <canvas id="myChart1" class="chart-canvas" height="375" width="637" style="display: block; box-sizing: border-box; height: 300px; width: 509.6px;"></canvas>
+                </div>
+              </div>
+              </div>
+              </div>
+              </div>
+              </div>
+              </div>
+              </div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
