--- a/konsultasi/templates/konsultasi_index.html
+++ b/konsultasi/templates/konsultasi_index.html
@@ -24,26 +24,28 @@
   </div>
 </div>
 <div class="row m-6 mx-sm-4">
-
+  {% for konsultasi in list_konsultasi %}
   <div class="col-xl-4 col-sm-6 col-12 mb-4">
     <div class="card">
-      <div class="card-header bg-tertiary pt-0"></div>
       <div class="card-body bg-tertiary">
-        <div class="d-flex">
-          <div class="py-0">
-            <div class="col-4 text-end">
-              <div class="icon icon-shape bg-dark shadow-primary text-center rounded-circle">
-
-              </div>
+        <div class="d-flex justify-content-around align-items-center">
+          <div class="col-md-3 col-4">
+            <div class="avatar avatar-lg bg-primary shadow-primary text-center rounded-circle" width="200">
+              <img src="{% static 'images/default.png' %}"
+                class="avatar bg-info">
+              </img>
             </div>
           </div>
-          <div class="flex-fill">
-
-          </div>
+          <div class="col-md-8 col-sm-7 col-8">
+            <h3 class="text-lg mb-0">{{ konsultasi.konsultan }}</h3>
+            <div class="text-sm mb-2">{{ konsultasi.tanggal }}</div>
+            <div class="text-sm">
+              <span class="badge badge-sm bg-gradient-secondary">{{ konsultasi.status }}</span>
+            </div>
         </div>
       </div>
-    </div>
+    </div> 
   </div>
-
 </div>
+{% endfor %}
 {% endblock content %}
