--- a/catatanTransaksi/templates/buat_catatan_transaksi.html
+++ b/catatanTransaksi/templates/buat_catatan_transaksi.html
@@ -9,6 +9,17 @@
     <div class="col-12 mx-auto">
       <div class="card z-index-0">
         <div class="card-header pb-2">
+          {% if messages %}
+          {% for msg in messages %}
+          <div class="alert alert-danger" role="alert">
+            <div class="text-white">
+              <strong>Gagal!</strong>
+              {{ msg }}
+            </div>
+          </div>
+          {% endfor %}
+          {% endif %}
+
           <a href="{% url 'catatan-transaksi:index' %}">
             <div class="btn btn-sm btn-icon btn-3 btn-danger mb-4">
               <span class="btn-inner--icon me-2"><i class="fa fa-arrow-left"></i></span>
@@ -18,31 +29,27 @@
           <h5 class="text-center">Formulir Pembuatan Catatan Transaksi</h5>
         </div>
         <div class="card-body">
-          <form method="post" id="catatanTransaksiForm" data-kategoris-url="{% url 'catatan-transaksi:ajax_load_kategoris' %}" novalidate>
+          <form role="form" method="post" id="catatanTransaksiForm"
+            data-kategoris-url="{% url 'catatan-transaksi:ajax_load_kategoris' %}">
             {% csrf_token %}
             <div class="mb-3">
-              {{ form.deskripsi.errors }}
-              <label for="{{ form.deskripsi.id_for_label }}">Deskripsi</label>
+              <label for="{{ form.deskripsi.id_for_label }}">Deskripsi Catatan Transaksi</label>
               {{ form.deskripsi }}
             </div>
             <div class="mb-3">
-              {{ form.nominal.errors }}
-              <label for="{{ form.nominal.id_for_label }}">nominal</label>
+              <label for="{{ form.nominal.id_for_label }}">Nominal Catatan Transaksi</label>
               {{ form.nominal }}
             </div>
             <div class="mb-3">
-              {{ form.tanggal.errors }}
-              <label for="{{ form.tanggal.id_for_label }}">tanggal</label>
+              <label for="{{ form.tanggal.id_for_label }}">Tanggal Catatan Transaksi</label>
               {{ form.tanggal }}
             </div>
             <div class="mb-3">
-              {{ form.jenis.errors }}
-              <label for="{{ form.jenis.id_for_label }}">jenis</label>
+              <label for="{{ form.jenis.id_for_label }}">Jenis Catatan Transaksi</label>
               {{ form.jenis }}
             </div>
             <div class="mb-3">
-              {{ form.kategori.errors }}
-              <label for="{{ form.kategori.id_for_label }}">kategori</label>
+              <label for="{{ form.kategori.id_for_label }}">Kategori Catatan Transaksi</label>
               {{ form.kategori }}
             </div>
             <div class="text-center">
@@ -54,31 +61,7 @@
     </div>
   </div>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script>
-  $("#id_jenis").change(function () {
-    var url = $("#catatanTransaksiForm").attr("data-kategoris-url");
-    var jenisId = $(this).val();
-
-    $.ajax({
-      url: url,
-      data: {
-        'jenis': jenisId
-      },
-      success: function (data) {
-        $("#id_kategori").html(data);
-      }
-    });
-
-  });
-</script>
+<script src="{% static 'js/kategoriDropdownOptions.js' %}"></script>
 {% endblock content %}
-<body>
-  <form method="post" id="catatanTransaksiForm" data-kategoris-url="{% url 'catatan-transaksi:ajax_load_kategoris' %}" novalidate>
-    {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-    </table>
-    <button type="submit">Save</button>
-  </form>
-</body>
