--- a/catatanTransaksi/templates/catatan_transaksi_index.html
+++ b/catatanTransaksi/templates/catatan_transaksi_index.html
@@ -7,6 +7,16 @@
 {% block content %}
 <div class="card">
   <div class="card-header pb-1">
+    {% if messages %}
+    {% for msg in messages %}
+    <div class="alert alert-info" role="alert">
+      <div class="text-white">
+        <strong>Sukses!</strong>
+        {{ msg }}
+      </div>
+    </div>
+    {% endfor %}
+    {% endif %}
     <div class="d-flex justify-content-between align-items-center">
       <h3>Daftar Catatan Transaksi</h3>
       <div class="flex-fill pe-4">
@@ -31,31 +41,38 @@
 <div class="row m-6 mx-sm-4">
   {% if catatanTransaksis %}
   {% for catatanTransaksi in catatanTransaksis %}
+
   <div class="col-xl-4 col-sm-6 col-12 mb-4">
-    <div class="card">
-      <div class="card-header bg-tertiary pt-0"></div>
-      <div class="card-body bg-tertiary">
-        <div class="d-flex justify-content-between">
-          <div class="d-flex flex-row align-items-center">
-            <div class="ms-2 c-details">
-              <h4 class="mb-0">{{catatanTransaksi.kategori}}</h4>
-              <span>{{catatanTransaksi.tanggal}}</span>
+    <a href="{% url 'catatan-transaksi:detail' catatanTransaksi.pk %}" style="color: inherit;">
+      <div class="card move-on-hover">
+        <div class="card-header bg-tertiary pt-0"></div>
+        <div class="card-body bg-tertiary">
+          <div class="d-flex justify-content-between">
+            <div class="d-flex flex-row align-items-center">
+              <div class="ms-2 c-details">
+                <h4 class="mb-0">{{catatanTransaksi.kategori}}</h4>
+                <span>{{catatanTransaksi.tanggal}}</span>
+              </div>
             </div>
           </div>
-        </div>
-        <hr class="horizontal bg-primary pt-1">
-        <div class="d-flex justify-content-between">
-          <div class="d-flex flex-row align-items-center">
-            <div class="ms-2 c-details">
-              <span class="d-inline-block text-truncate" style="max-width: 25ch;">{{ catatanTransaksi.deskripsi }}</span>
-              <p style="color:DodgerBlue;"><strong> Rp {{ catatanTransaksi.nominal|intcomma }}</strong></p>
-              <p style="color:red;"><strong> Rp {{ catatanTransaksi.nominal|intcomma }}</strong></p>
+          <hr class="horizontal bg-primary pt-1">
+          <div class="d-flex justify-content-between">
+            <div class="d-flex flex-row align-items-center">
+              <div class="ms-2 c-details">
+                <span class="d-inline-block text-truncate" style="max-width: 25ch;">
+                  {{ catatanTransaksi.deskripsi }}
+                </span>
+                {% if catatanTransaksi.jenis.jenis == 1 %}
+                <p style="color:DodgerBlue;"><strong> Rp {{ catatanTransaksi.nominal|intcomma }}</strong></p>
+                {% else %}
+                <p style="color:red;"><strong> Rp {{ catatanTransaksi.nominal|intcomma }}</strong></p>
+                {% endif %}
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
+    </a>
   </div>
   {% endfor %}
   {% endif %}
