--- a/users/static/css/users.css
+++ b/users/static/css/users.css
@@ -44,7 +44,7 @@ body{
 
 .container .form{
     width: 50%;
-    padding: 30px;
+    padding: 10px 30px;
     background-color: var(--white);
     transition: margin-left 0.18s ease;
 }
@@ -171,4 +171,26 @@ body{
 .form .login-signup{
     margin-top: 30px;
     text-align: center;
+}
+
+.alert {
+  width: 90%;
+  margin: 10px auto;
+  padding: 15px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.success-alert {
+  background-color: #a8f0c6;
+  border-left: 5px solid #178344;
+}
+
+.danger-alert {
+  background-color: #f7a7a3;
+  border-left: 5px solid #8f130c;
+}
+
+.text-white {
+  color: #000;
 }
