change: handle redirect after user login

--- a/main/templates/landing_page.html
+++ b/main/templates/landing_page.html
@@ -177,7 +177,7 @@
               </div>
             </li>
           </ul>
-          <a href="#" class="btn btn-primary">Mulai Sekarang ></a>
+          <a href="/login" class="btn btn-primary">Mulai Sekarang ></a>
         </div>
       </section>
 
