--- a/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
+++ b/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
@@ -10,6 +10,7 @@
     <div class="col-12 mx-auto">
       <div class="card z-index-0">
         <div class="card-header pb-2">
+          {% include 'includes/alert.html' %}
           <div class="d-flex flex-row-reverse">
               <a href="{% url 'catatan-transaksi:buat' %}">
               <div class="btn btn-icon btn-3 btn-dark mb-4">
