--- a/konsultan/templates/konsultan_dashboard.html
+++ b/konsultan/templates/konsultan_dashboard.html
@@ -6,6 +6,7 @@
 {% block content %}
 <div class="card mb-6">
   <div class="card-header pb-0">
+    {% include 'includes/alert.html' %}
     <h4 class="font-weight-bolder">Tabel Pendaftar Konsultasi</h4>
   </div>
   <div class="card-body px-0 pt-0 pb-2">
