--- a/konsultasi/templates/konsultasi_create.html
+++ b/konsultasi/templates/konsultasi_create.html
@@ -9,6 +9,7 @@
     <div class="col-12 mx-auto">
       <div class="card z-index-0">
         <div class="card-header pb-2">
+          {% include 'includes/alert.html' %}
           <a href="{% url 'konsultasi:pilih_konsultan' %}">
             <div class="btn btn-sm btn-icon btn-3 btn-danger mb-4">
               <span class="btn-inner--icon me-2"><i class="fa fa-arrow-left"></i></span>
