--- a/konsultasi/templates/konsultasi_selection.html
+++ b/konsultasi/templates/konsultasi_selection.html
@@ -17,30 +17,46 @@
   </div>
   <div class="card-body p-2"></div>
 </div>
-<div class="row mt-5 mx-6 mx-sm-4">
-  {% for konsultan in list_konsultan %}
-  <div class="col-xl-4 col-sm-6 col-12 mb-4">
-    <a href="{% url 'konsultasi:ajukan_konsultasi' konsultan.id %}">
-      <div class="card">
-        <div class="card-body bg-tertiary">
-          <div class="d-flex justify-content-around align-items-center">
-            <div class="col-md-3 col-4">
-              <div class="avatar avatar-lg bg-primary shadow-primary text-center rounded-circle" width="200">
-                <img src="{% static 'images/default.png' %}"
-                  class="avatar bg-info">
-                </img>
+
+<div class="card my-4">
+  <div class="card-header p-0"></div>
+  <div class="card-body p-0">
+    <div class="row mt-5 mx-6 mx-sm-4">
+      {% if list_konsultan %}
+      {% for konsultan in list_konsultan %}
+      <div class="col-xl-4 col-sm-6 col-12 mb-4">
+        <a href="{% url 'konsultasi:ajukan_konsultasi' konsultan.id %}">
+          <div class="card">
+            <div class="card-body bg-tertiary">
+              <div class="d-flex justify-content-around align-items-center">
+                <div class="col-md-3 col-4">
+                  <div class="avatar avatar-lg bg-primary shadow-primary text-center rounded-circle" width="200">
+                    <img src="{% static 'images/default.png' %}"
+                      class="avatar bg-info">
+                    </img>
+                  </div>
+                </div>
+                <div class="col-md-8 col-sm-7 col-8">
+                  <h3 class="text-lg mb-0">{{ konsultan }}</h3>
+                  <div class="text-xs mb-2 text-danger">@{{ konsultan.user.username }}</div>
+                  <div class="text-sm text-uppercase">{{ konsultan.user.company_name }}</div>
+                </div>
               </div>
             </div>
-            <div class="col-md-8 col-sm-7 col-8">
-              <h3 class="text-lg mb-0">{{ konsultan }}</h3>
-              <div class="text-xs mb-2 text-danger">@{{ konsultan.user.username }}</div>
-              <div class="text-sm text-uppercase">{{ konsultan.user.company_name }}</div>
-            </div>
-          </div>
-        </div>
-      </div> 
-    </a>
+          </div> 
+        </a>
+      </div>
+      {% endfor %}
+      {% else %}
+      <div class="text-center pb-4">
+        <i class="fa fa-sad-tear text-dark text-9xl opacity-10 m-3"></i>
+        <h6 class="font-weight-bold mb-0">Tidak ada daftar konsultan</h6>
+        <p class="text-sm">
+          Mohon maaf, sepertinya belum ada konsultan kami yang available untuk saat ini
+        </p>
+      </div>
+      {% endif %}
+    </div>
   </div>
-  {% endfor %}
 </div>
 {% endblock content %}
