change: update minor mistake in copywriting

--- a/konsultasi/templates/konsultasi_index.html
+++ b/konsultasi/templates/konsultasi_index.html
@@ -57,9 +57,9 @@
     <div class="row mt-5 mx-6 mx-sm-4">
       <div class="text-center pb-4">
         <i class="fa fa-sad-tear text-dark text-9xl opacity-10 m-3"></i>
-        <h6 class="font-weight-bold mb-0">Tidak ada daftar konsultan</h6>
+        <h6 class="font-weight-bold mb-0">Tidak ada daftar konsultasi saat ini</h6>
         <p class="text-sm">
-          Mohon maaf, sepertinya belum ada konsultan kami yang available untuk saat ini
+          Anda dapat mulai mengajukan konsultasi dengan menekan tombol mulai konsultasi
         </p>
       </div>
     </div>
