change: fix bug etc.

--- a/anggaran/templates/anggaran_index.html
+++ b/anggaran/templates/anggaran_index.html
@@ -63,6 +63,14 @@
                     </div>
                 </div>
             {% endfor %}
+            {% else %}
+            <div class="text-center pb-4">
+              <i class="fa fa-sad-tear text-dark text-9xl opacity-10 m-3"></i>
+              <h6 class="font-weight-bold mb-0">Tidak ada daftar anggaran</h6>
+              <p class="text-sm">
+                Anda dapat menambah anggaran dengan menekan tombol 'Buat Anggaran'
+              </p>
+            </div>
         {% endif %}
             </div>
         </div>
